test/typecheck/y_error_12.j.gold
test/y_error_12.j:14:16: error: incompatible value in return; function returns 'Int', value has type 'String'
    |
 14 |     return "kekw";
    |            ^
