test/typecheck/y_error_12.j
class UWU
{
	Void main()
	{
		Int a;
		a = new A().foo();
	}
}

class A
{
	Int foo()
	{
		return "kekw";
	}
}
